updated project design and layout

--- a/src/main/resources/templates/edit-todo.html
+++ b/src/main/resources/templates/edit-todo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,33 +9,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Підключення стилів Font Awesome через CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <link rel="stylesheet" href="/static/css/styles.css"> <!-- Ваш CSS -->
 </head>
 <body>
 
 <div class="container mt-5">
     <h2>Edit Todo Item</h2>
     <form action="#" th:action="@{/todo/{id}(id=${todoItem.id})}" th:object="${todoItem}" method="POST">
-        <div class="form-group">
+        <div class="form-group mb-3">
             <label for="description">Description</label>
-            <input class="form-control" type="text" th:field="*{description}" id="description" placeholder="Description">
+            <input class="form-control" type="text" th:field="*{description}" id="description" placeholder="Description" required>
+        </div>
 
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" th:field="*{isComplete}" id="isComplete">
-                <label class="form-check-label" for="isComplete">Completed</label>
-            </div>
+        <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" th:field="*{isComplete}"
+                   id="isComplete" th:checked="${todoItem.isComplete}">
+            <label class="form-check-label" for="isComplete">Completed</label>
+        </div>
+
+        <div class="mb-3">
+            <p class="text-muted">
+                Created at: <span th:text="${#dates.format(todoItem.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></span>
+            </p>
+            <p class="text-muted">
+                Last updated: <span th:text="${#dates.format(todoItem.updatedAt, 'yyyy-MM-dd HH:mm:ss')}"></span>
+            </p>
         </div>
 
         <button type="submit" class="btn btn-outline-success">
             <i class="fa fa-save"></i> Save Changes
         </button>
-        <a class="btn btn-outline-secondary" th:href="@{/}" role="button">
+        <a class="btn btn-outline-secondary ms-2" th:href="@{/}" role="button">
             <i class="fa fa-arrow-left"></i> Back
         </a>
     </form>
 </div>
-
-
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
