--- a/src/main/resources/templates/root.html
+++ b/src/main/resources/templates/root.html
@@ -3,59 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Todo</title>
-    <!-- Підключення стилів Bootstrap через CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- Підключення стилів Font Awesome через CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <title>Todoist</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-    <h1>to-do list</h1>
-    <hr />
-    <table class="table table-bordered table-striped">
-        <thead>
-        <tr>
-            <th>Actions</th>
-            <th>Id</th>
-            <th>Description</th>
-            <th>Is Complete</th>
-            <th>Created At</th>
-            <th>Updated At</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="item : ${todoItems}">
-            <td>
-                <a class="btn btn-sm btn-outline-primary" th:href="@{'/edit-todo/' + ${item.id}}">
-                    <i class="fa fa-edit"></i> Edit
-                </a>
-                <a class="btn btn-sm btn-outline-danger" th:href="@{'/delete-todo/' + ${item.id}}">
-                    <i class="fa fa-trash"></i> Delete
-                </a>
-            </td>
-            <td th:text="${item.id}"></td>
-            <td th:text="${item.description}"></td>
-            <td>
-                <span th:if="${item.isComplete}" th:text="'Yes'"></span>
-                <span th:unless="${item.isComplete}" th:text="'No'"></span>
-            </td>
-            <td th:text="${item.createdAt}"></td>
-            <td th:text="${item.updatedAt}"></td>
-        </tr>
-        </tbody>
-    </table>
-
-    <p>
-        <a class="btn btn-outline-success" href="/create-todo">
-            <i class="fa fa-plus-square"></i> Create a Todo
-        </a>
-    </p>
+<div class="sidebar">
+    <h2>Todoist</h2>
+    <ul class="nav flex-column">
+        <li class="nav-item">
+            <a class="nav-link active" href="#"><i class="fas fa-inbox"></i> Inbox</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fas fa-calendar-day"></i> Today</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fas fa-calendar-week"></i> Upcoming</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#"><i class="fas fa-project-diagram"></i> Projects</a>
+        </li>
+    </ul>
 </div>
+<div class="content">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Dashboard</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-search"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-cog"></i></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="task-list">
+        <h3 th:text="${currentDate}"></h3>
+        <div class="task-item" th:each="item : ${todoItems}">
+            <span th:text="${item.description}"></span>
+            <span>
+                <a class="btn btn-sm btn-outline-primary" th:href="@{/edit-todo/{id}(id=${item.id})}">
+                    <i class="fas fa-edit"></i>
+                </a>
+                <a class="btn btn-sm btn-outline-danger" th:href="@{/delete-todo/{id}(id=${item.id})}">
+                    <i class="fas fa-trash"></i>
+                </a>
+            </span>
+        </div>
+        <p>
+            <a class="btn" th:href="@{/create-todo}">
+                <i class="fas fa-plus"></i> Create a Todo
+            </a>
+        </p>
+    </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/js/all.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
+</div>
 </body>
 </html>
